# pragma-node

./: .dockerignore  .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.clickhouse-ingestor  Dockerfile.ingestor  Dockerfile.node  Makefile  README.md  buildspec.yml  cloudbuild.prod.yaml  cloudbuild.yaml  compose.dev.yaml  compose.yaml  config.yml  openapi.json  prettier.config.cjs  rust-toolchain.toml
clickhouse-ingestor/: Cargo.toml
clickhouse-ingestor/migrations/: 001_create_prices.sql  002_create_funding_rates.sql  003_create_open_interest.sql  004_create_trades.sql  005_add_buyer_seller_address_to_trades.sql  006_create_prices_v2.sql  007_create_funding_rates_v2.sql  008_create_open_interest_v2.sql  009_create_trades_v2.sql  010_create_oracle_prices_v2.sql  011_create_mark_prices_v2.sql  init.sh
clickhouse-ingestor/src/: config.rs  consumers.rs  entries.rs  insert.rs  main.rs  processors.rs
pragma-common/: Cargo.toml  README.md
pragma-common/src/: errors.rs  hash.rs  lib.rs  providers.rs  telemetry.rs  tracing.rs  types.rs  utils.rs
pragma-common/src/signing/: mod.rs  starkex.rs
pragma-common/src/types/: auth.rs  block_id.rs  entries.rs  hex_hash.rs  instrument.rs  merkle_tree.rs  mod.rs  options.rs  pair.rs  timestamp.rs  typed_data.rs  utils.rs
pragma-consumer/: Cargo.toml  README.md
pragma-consumer/examples/: Cargo.toml  README.md  complete_flow.rs  fallback_provider_example.rs  mainnet_specific_block.rs  sepolia_custom_url_latest_block.rs  sepolia_custom_url_pending_block.rs
pragma-consumer/examples/src/: main.rs  mainnet_latest_block.rs  mainnet_option.rs  mainnet_specific_block.rs  sepolia_custom_url_latest_block.rs  sepolia_custom_url_pending_block.rs  sepolia_option.rs  sepolia_option_macro.rs
pragma-consumer/src/: builder.rs  client.rs  config.rs  constants.rs  consumer.rs  lib.rs  main.rs  types.rs
pragma-consumer/src/types/: merkle_tree.rs  mod.rs
pragma-consumer/tests/: test_consumer.rs
pragma-consumer/tests/common/: mocks.rs  mod.rs  utils.rs
pragma-entities/: Cargo.toml
pragma-entities/migrations/2023-10-11-223513_add_entries/: up.sql
pragma-entities/migrations/2023-10-11-223513_create_entries/: down.sql  up.sql
pragma-entities/migrations/2023-10-12-005433_add_source/: down.sql
pragma-entities/migrations/2023-10-12-232125_add_publishers/: up.sql
pragma-entities/migrations/2023-10-12-232125_add_publishers_index/: down.sql  up.sql
pragma-entities/migrations/2023-10-12-232125_add_publishers_table/: down.sql  up.sql
pragma-entities/migrations/2023-10-16-233310_add_account_address/: up.sql
pragma-entities/migrations/2023-10-25-134954_add_currencies/: up.sql
pragma-entities/migrations/2023-11-18-143139_add_composite_index/: up.sql
pragma-entities/migrations/2023-11-24-185951_add_source_index/: down.sql  up.sql
pragma-entities/migrations/2023-12-29-052754_add_hypertable_entries/: down.sql  up.sql
pragma-entities/migrations/2024-01-11-123510_add_continuous_aggregates/: down.sql  up.sql
pragma-entities/migrations/2024-01-11-123510_add_median_aggregates/: down.sql  up.sql
pragma-entities/migrations/2024-01-12-095822_add_realtime_agg/: down.sql  up.sql
pragma-entities/migrations/2024-01-12-135355_add_candlestick_views/: down.sql  up.sql
pragma-entities/migrations/2024-01-19-113453_add_twap_aggregates/: down.sql  up.sql
pragma-entities/migrations/2024-02-14-160804_add_2hours_interval/: down.sql  up.sql
pragma-entities/migrations/2024-02-14-161427_set_twap_realtime/: down.sql  up.sql
pragma-entities/migrations/2024-02-20-090454_fix_twap_aggs/: down.sql  up.sql
pragma-entities/migrations/2024-06-07-130038_add_publisher_signature/: down.sql  up.sql
pragma-entities/migrations/2024-06-07-135432_type_entry_component/: down.sql  up.sql
pragma-entities/migrations/2024-06-10-042606_create_perp_entries/: down.sql  up.sql
pragma-entities/migrations/2024-06-11-120309_create_future_entries/: down.sql  up.sql
pragma-entities/migrations/2024-06-26-125836_add_continuous_aggregates_future/: down.sql  up.sql
pragma-entities/migrations/2024-06-26-145400_add_twap_aggregates_future/: down.sql  up.sql
pragma-entities/migrations/2024-07-02-232003_add_median_aggregates/: down.sql  up.sql
pragma-entities/migrations/2024-07-02-232723_new_ohlc_aggs/: down.sql  up.sql
pragma-entities/migrations/2024-07-15-112059_add_daily_and_weekly_timeframe/: down.sql  up.sql
pragma-entities/migrations/2024-07-16-000000_add_outlier_filtering/: down.sql  up.sql
pragma-entities/migrations/2024-10-25-092708_add_new_pairs/: down.sql  up.sql
pragma-entities/migrations/2024-11-27-143218_create_starkex_entries/: down.sql  up.sql
pragma-entities/migrations/2025-02-13-142000_add_median_1s_interval/: down.sql  up.sql
pragma-entities/migrations/2025-02-14-151531_add_5s_interval/: down.sql  up.sql
pragma-entities/migrations/2025-02-20-143544_add_more_currencies/: down.sql  up.sql
pragma-entities/migrations/2025-02-26-070810_remove_table_currencies/: down.sql  up.sql
pragma-entities/migrations/2025-03-08-034002_add-100ms-views/: down.sql  up.sql
pragma-entities/migrations/2025-03-15-043705_add-compression/: down.sql  up.sql
pragma-entities/migrations/2025-03-20-082722_update-chunk-intervals/: down.sql  up.sql
pragma-entities/src/: connection.rs  db.rs  error.rs  lib.rs  macros.rs  pagination.rs  schema.rs  transaction.rs
pragma-historical/: Cargo.toml  README.md
pragma-historical/src/: main.rs
pragma-ingestor/: Cargo.toml
pragma-ingestor/config/: base.toml
pragma-ingestor/grafana/: local.json
pragma-ingestor/src/: config.rs  consumer.rs  db.rs  error.rs  main.rs  metrics.rs  subscriber.rs
pragma-node/: Cargo.toml
pragma-node/examples/: starkex.rs
pragma-node/src/: caches.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  requests.rs  routes.rs  state.rs
pragma-types/: Cargo.toml  README.md
pragma-types/src/: auth.rs  entries.rs  lib.rs  typed_data.rs  utils.rs
tests/: Cargo.toml
tests/e2e/: get_entry.rs  healthcheck.rs  main.rs  transactional.rs
(+352 files in other folders)
