[workspace]
resolver = "2"
members = [
  "pragma-node",
  "pragma-ingestor",
  "pragma-entities",
  "pragma-common",
  "pragma-consumer",
  "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/astraly-labs/pragma-node/"
authors = ["Pragma Labs <support@pragma.build>"]

[workspace.dependencies]
color-eyre = "0.6"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.32.0"
axum = { version = "0.8", features = ["macros", "ws", "tokio"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-macros = "0.5"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.5", features = [
  "abigen-rs",
] }
dashmap = "6.1.0"
diesel = { version = "2.1", features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
bigdecimal = { version = "0.4.1", features = ["serde"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.4", features = ["postgres"] }
futures-util = "0.3.30"
futures = "0.3.31"
tokio-stream = "0.1.17"
governor = { version = "0.6.0" }
dotenvy = "0.15.7"
envy = "0.4.2"
indexmap = { version = "2.2.6", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.204", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
nonzero_ext = { version = "0.3.0" }
serde_json = { version = "1.0.122", features = ["arbitrary_precision"] }
starknet = "0.12.0"
starknet-crypto = "0.7.3"
quote = "1.0.37"
redis = { version = "0.26.1", features = ["json", "tokio-comp"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
rdkafka = "0.36.2"
time = "0.3.29"
thiserror = "1.0.49"
strum = { version = "0.26", features = ["derive"] }
tracing-test = "0.2.5"
url = "2.5.0"
tower = { version = "0.5" }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tokio = { version = "^1.43.0", features = ["full"] }
toml = "0.8.8"
utoipa = { version = "5.0.0", features = ["axum_extras", "chrono", "uuid"] }
utoipauto = "0.1.14"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }

# David Bernard (sacre jojo)
tracing = "0.1"
axum-tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.26.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = { version = "0.26.0" }
opentelemetry-otlp = { version = "0.26.0", features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry-appender-tracing = { version = "0.26.0", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
] }
tracing-opentelemetry = "0.27.0"

pragma-monitoring = { git = "https://github.com/astraly-labs/pragma-monitoring" }

# Test dependencies
rstest = "0.18.2"
httpmock = { version = "0.7.0" }
testcontainers = { version = "0.21.1" }
testcontainers-modules = { version = "0.9.0", features = [
  "postgres",
  "kafka",
  "zookeeper",
  "http_wait",
] }
pretty_assertions = "1.4.0"
