[workspace]
resolver = "2"
members = [
  "pragma-node",
  "pragma-historical",
  "pragma-ingestor",
  "clickhouse-ingestor",
  "pragma-entities",
  "tests",
  "scripts",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.89.0"
edition = "2024"
repository = "https://github.com/astraly-labs/pragma-node/"
authors = ["Pragma Labs <support@pragma.build>"]

[workspace.lints]
rust.missing_debug_implementations = "allow"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
or_fun_call = "allow"
redundant_pub_crate = "allow"
missing_const_for_fn = "allow"

[workspace.dependencies]
pragma-common = { version = "0.6.4", features = [
  "serde",
  "services",
  "task-group",
  "telemetry",
  "utoipa",
  "starknet",
  "proto",
] }
pragma-historical = { path = "./pragma-historical" }
pragma-entities = { path = "./pragma-entities" }
pragma-ingestor = { path = "./pragma-ingestor" }
pragma-node = { path = "./pragma-node" }
faucon-rs = { version = "0.7.7", registry = "pragma" }

anyhow = "1.0.102"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.32.0"
google-secretmanager1 = "7.0.0"
axum = { version = "0.8", features = ["macros", "ws", "tokio"] }
axum-extra = { version = "0.12.1", features = ["typed-header", "query"] }
axum-macros = "0.5"
async-trait = "0.1.86"
cainome = { version = "0.9.1", features = [
  "abigen-rs",
], git = "https://github.com/cartridge-gg/cainome", rev = "cb41794" }
dashmap = "6.1.0"
diesel = { version = "2.1", features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
futures-util = "0.3.32"
futures = "0.3.32"
tokio-stream = "0.1.18"
governor = { version = "0.10.4" }
dotenvy = "0.15.7"
envy = "0.4.2"
indexmap = { version = "2.14.0", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.204", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
nonzero_ext = { version = "0.3.0" }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
starknet = { package = "starknet-rust", version = "0.18.0" }
starknet-crypto = "0.8.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rdkafka = "0.39.0"
thiserror = "2.0.18"
strum = { version = "0.27", features = ["derive"] }
url = "2.5.8"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
tokio = { version = "^1.52.2", features = ["full"] }
tokio-util = "0.7.18"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipauto = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.23", features = ["fast-rng", "v4", "serde"] }

# David Bernard (sacre jojo)
tracing = "0.1"
axum-tracing-opentelemetry = "0.33.1"
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = { version = "0.26.0" }
opentelemetry-otlp = { version = "0.29.0", features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { version = "0.31.0" }
opentelemetry-appender-tracing = { version = "0.29.1", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
] }
tracing-opentelemetry = "0.32.1"

pragma-monitoring = { git = "https://github.com/astraly-labs/pragma-monitoring", branch = "chore/bump_deps" }

# Test dependencies
rstest = "0.26.1"
serial_test = "3.4.0"
testcontainers = { version = "0.23.1" }
tracing-test = "0.2.6"
testcontainers-modules = { version = "0.11.6", features = [
  "postgres",
  "kafka",
  "zookeeper",
  "http_wait",
] }
pretty_assertions = "1.4.0"
rand = "0.10.1"
csv = "1.4.0"
