[package]
name = "clickhouse-ingestor"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
faucon-rs = { workspace = true }
pragma-common = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clickhouse = { version = "0.14.0", features = ["lz4", "uuid", "time", "test-util"] }
dotenvy = { workspace = true }
futures-util = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true }
