[package]
name = "pragma-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://pragma.build/"
repository = "https://github.com/astraly-labs/pragma-node/"
description = "Common utilities and types for Pragma SDKs"
readme = "README.md"
keywords = ["pragma", "sdk", "consumer", "data", "feeds"]

[lints]
workspace = true

[dependencies]
bigdecimal = { workspace = true, features = ["serde"] }
cainome = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
indexmap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
utoipa = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
