[package]
name = "pragma-consumer"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://pragma.build/"
repository = "https://github.com/astraly-labs/pragma-node/"
description = "SDK to consume Pragma data feeds"
readme = "README.md"
keywords = ["pragma", "sdk", "consumer", "data", "feeds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

pragma-common = { path = "../pragma-common", version = "0.1.0" }

[dev-dependencies]
rstest = { workspace = true }
httpmock = { workspace = true, features = ["remote"] }
