[package]
name = "pragma-entities"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["macros"] }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
] }
diesel_migrations = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
