[package]
name = "pragma-entities"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
pragma-common = { workspace = true }

axum = { workspace = true, features = ["macros"] }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
] }
diesel_migrations = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }
