[package]
name = "pragma-historical"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
pragma-common = { workspace = true }
pragma-entities = { workspace = true }

diesel = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
uuid = { workspace = true }
