[package]
name = "pragma-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
lazy_static = "1.4.0"
pragma-common = { path = "../pragma-common", version = "1.0.0" }
pragma-entities = { path = "../pragma-entities", version = "1.0.0" }
rdkafka = "0.36.0"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
time = "0.3.29"
tokio = { version = "1.11.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3"
deadpool-diesel = { version = "0.4", features = ["postgres"] }
