[package]
name = "pragma-ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-diesel = { workspace = true, features = ["postgres"] }
dotenvy = { workspace = true }
envy = { workspace = true }
lazy_static = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

pragma-common = { path = "../pragma-common", version = "1.0.0" }
pragma-entities = { path = "../pragma-entities", version = "1.0.0" }
