[package]
name = "pragma-ingestor"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
pragma-common = { workspace = true }
pragma-entities = { workspace = true }

deadpool-diesel = { workspace = true, features = ["postgres"] }
dotenvy = { workspace = true }
envy = { workspace = true }
lazy_static = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
