[package]
name = "pragma-node"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-macros = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
lazy_static = { workspace = true }
moka = { workspace = true, features = ["future"] }
nonzero_ext = { workspace = true }
pragma-monitoring = { workspace = true }
prometheus = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }

pragma-common = { path = "../pragma-common" }
pragma-entities = { path = "../pragma-entities" }

[dev-dependencies]
rstest = { workspace = true }
