[package]
name = "pragma-node"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-macros = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
cainome = { workspace = true, features = ["abigen-rs"] }
chrono = { workspace = true, features = ["serde"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
moka = { workspace = true, features = ["future"] }
nonzero_ext = { workspace = true }
opentelemetry = { workspace = true }
pragma-monitoring = { workspace = true }
prometheus = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }

pragma-common = { path = "../pragma-common" }
pragma-entities = { path = "../pragma-entities" }
utoipauto = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
