[package]
name = "pragma-node"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
pragma-common = { path = "../pragma-common" }
pragma-entities = { path = "../pragma-entities" }

async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "tokio"] }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
cainome = { workspace = true, features = ["abigen-rs"] }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
dotenvy = { workspace = true }
envy = { workspace = true }
futures.workspace = true
futures-util = { workspace = true }
governor = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
moka = { workspace = true, features = ["future"] }
nonzero_ext = { workspace = true }
opentelemetry = { workspace = true }
pragma-monitoring = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true, features = ["tokio-comp", "json"] }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
utoipauto = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4", "serde"] }

[dev-dependencies]
rstest = { workspace = true }
tokio-tungstenite = { version = "0.20.1", features = ["connect", "native-tls"] }
url = "2.5.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
