[package]
name = "tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[test]]
name = "node-tests"
path = "e2e/main.rs"

[dev-dependencies]
pragma-common = { workspace = true }

diesel = { workspace = true, features = [
  "postgres",
  "extras",
  "postgres_backend",
  "serde_json",
] }
diesel-async = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = [
  "kafka",
  "postgres",
  "zookeeper",
  "http_wait",
] }
serial_test = { workspace = true }
bigdecimal = { workspace = true }
